--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ tmp
 *.acn
 *.acr
 *.alg
-*.aux
+*.*aux
 *.bbl
 *.blg
 *.dvi
@@ -55,7 +55,7 @@ tmp
 *.ind
 *.ist
 *.lof
-*.log
+*.*log
 *.lot
 *.maf
 *.mtc
@@ -71,3 +71,5 @@ tmp
 *.vrb
 *.xdy
 *.tdo
+
+*project.vim
